--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -31,3 +31,15 @@ changelog:
       - "^chore:"
       - "^docs:"
       - "^ci:"
+
+brews:
+  - repository:
+      owner: lcorneliussen
+      name: homebrew-md365
+    homepage: https://github.com/lcorneliussen/md365
+    description: "AI-native CLI for Microsoft 365 - calendars, contacts, and mail as Markdown"
+    license: MIT
+    install: |
+      bin.install "md365"
+    test: |
+      system "#{bin}/md365", "--help"
