--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -25,12 +25,10 @@ checksum:
   name_template: checksums.txt
 
 changelog:
-  sort: asc
-  filters:
-    exclude:
-      - "^chore:"
-      - "^docs:"
-      - "^ci:"
+  disable: true
+
+release:
+  header: "{{ .TagBody }}"
 
 brews:
   - repository:
